<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_bg_white_a700"
    tools:context=".view.ScreenTwoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_bg_white_a700"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_screen"
            android:textSize="18sp"
            android:textColor="@color/black_900"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinssemibold"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="12sp"
        android:textColor="@color/black_900"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginStart="21dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe"
        android:textSize="18sp"
        android:textColor="@color/black_900"
        android:fontFamily="@font/poppinssemibold"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome"
        app:layout_constraintStart_toStartOf="@id/txtWelcome"/>

    <TextView
        android:id="@+id/txtSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_user_name"
        android:textColor="@color/black_900"
        android:textSize="24sp"
        android:fontFamily="@font/poppinssemibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtUsername"
        app:layout_constraintBottom_toTopOf="@id/btnChoose"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChoose"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:background="@drawable/rectangle_bg_bluegray_700_radius_12"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/choose_a_user"
        android:textSize="16sp"
        android:textColor="@color/white_A700"
        android:fontFamily="@font/poppinsmedium"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

</androidx.constraintlayout.widget.ConstraintLayout>