<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background1"
    tools:context=".view.ScreenOneActivity">

    <ImageView
        android:id="@+id/ivFotoProfile"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:src="@drawable/img_icphoto"
        android:layout_marginTop="142dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:textColor="@color/gray_600"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/name"
        android:inputType="text"
        android:textColorHint="@color/gray_600_5b"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/ivFotoProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/etPalindrome"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/gray_600"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/palindrome"
        android:inputType="text"
        android:textColorHint="@color/gray_600_5b"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheck"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:background="@drawable/rectangle_bg_bluegray_700_radius_12"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/check"
        android:textSize="16sp"
        android:textColor="@color/white_A700"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintTop_toBottomOf="@id/etPalindrome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:background="@drawable/rectangle_bg_bluegray_700_radius_12"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/next"
        android:textSize="16sp"
        android:textColor="@color/white_A700"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintTop_toBottomOf="@id/btnCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

</androidx.constraintlayout.widget.ConstraintLayout>